# RustyClaw

./: .gitignore  AGENT_GITHUB.md  CLAUDE.md  Cargo.toml  README.md  ai-rules.md  config.json
.claude/: settings.json
.github/workflows/: ci.yml
crates/rustyclaw-agent/: Cargo.toml
crates/rustyclaw-agent/src/: lib.rs
crates/rustyclaw-channels/: Cargo.toml
crates/rustyclaw-channels/src/: lib.rs
crates/rustyclaw-cli/: Cargo.toml  build.rs
crates/rustyclaw-cli/src/: main.rs
crates/rustyclaw-config/: Cargo.toml
crates/rustyclaw-config/src/: lib.rs  vault.rs
crates/rustyclaw-gateway/: Cargo.toml
crates/rustyclaw-gateway/src/: cron.rs  external_mcp.rs  health.rs  heartbeat.rs  lib.rs  skills.rs  watchdog.rs  web_preview.rs
crates/rustyclaw-mcp/: Cargo.toml
crates/rustyclaw-mcp/src/: lib.rs
crates/rustyclaw-providers/: Cargo.toml
crates/rustyclaw-providers/src/: lib.rs
crates/rustyclaw-storage/: Cargo.toml
crates/rustyclaw-storage/src/: lib.rs  search.rs
crates/rustyclaw-summary-proto/: Cargo.toml
crates/rustyclaw-summary-proto/src/: lib.rs  main.rs  proto.rs  session.rs
crates/rustyclaw-tools/: Cargo.toml
crates/rustyclaw-tools/src/: lib.rs
docs/: 00_rustyclaw.md  01_architecture.md  02_agent_pipeline.md  03_workspace_spec.md  04_heartbeat_spec.md  05_gateway_spec.md  06_roadmap_decisions.md  2026-06-04-topic-patrol-deliver-skill-review.md  CLAUDE.md  README.md  analysis_results.md  implementation_plan.md  lane_queue_visualization_report.md  log_inspection_report.md  remaining_native_decoupling_implementation_plan.md  rusty_claw_improvement_plan.md  task-backlog.md  task.md  walkthrough.md
docs/adr/: 000-template.md  001-dashboard-rag-approach-c-hybrid.md  002-gws-tool-implementation-approach.md  003-backup-systemd-user-rsync.md  004-adopt-local-merge-workflow.md  005-rate-limiter-quota-enforcement.md  006-context-mode-integration-scope.md
docs/archive/: 2026-05-27-discord-integration.md  2026-05-30-completed-phases-2-to-19.md  2026-05-30_rustyclaw_status_report.md  2026-06-03-context-window-phase1-design.md  2026-06-03-context-window-phase1.md  walkthrough.md
docs/archive/plans/: 06_roadmap_decisions.md  07_mcp_plan.md  2026-05-27_implementation_plan.md  2026-05-27_llmprover_gmn_plan.md  2026-05-28-context-management-improvements.md  2026-05-28-phase7-bugfix-and-stabilization.md  (+57 more)
docs/plan/: llmprover_gmn_plan.md
docs/plans/: 2026-05-30-phase22-gaps.md  2026-05-31-dev-env-review.md  2026-05-31-phase31-step1-3-dashboard-review.md  2026-05-31-phase31-step1-3-dashboard.md  2026-05-31-phase31-step7-8.md  2026-05-31-phase34-session-logs-scripts.md  2026-06-03-topic-patrol-improvement-plan.md  2026-06-05-rig-core-unified-rag.md  2026-06-05-static-docs-rag.md  2026-06-06-git-history-reconstruction-phase4.md  2026-06-06-git-reconstruction-phase3.md  2026-06-06-local-embedding-complete-rag-unification.md  2026-06-07-dashboard-rag-design.md  2026-06-07-dashboard-rag-implementation.md  2026-06-07-heartbeat-context-optimization.md  2026-06-07-issue33-discord-rag.md  2026-06-07-phase42a-heartbeat-rag-query.md  2026-06-07-phase42b-heartbeat-step-rag.md  2026-06-07-phase42c-heartbeat-prompt-cache.md  2026-06-07-phase42d-time-decay-reranking.md  2026-06-07-phase43a-rag-optimized-heartbeat.md  2026-06-07-phase43b-dashboard-unification.md  2026-06-07-phase43b-implementation.md  2026-06-07-phase43c-channel-top-k-unification.md  2026-06-07-phase43c-implementation.md  2026-06-07-phase43d-rag-guardrails.md  2026-06-08-phase37-2-web-preview-server.md  2026-06-08-phase40-1-rig-providers-migration.md  2026-06-10-phase44-1-dashboard-timeout.md  2026-06-10-phase44-3-system-prompt-stabilization.md  2026-06-11-v0.4-implementation-overview.md  2026-06-12-phase51-1-llm-config-constraints.md  2026-06-13-context-optimization-proposal.md  2026-06-13-ctx-execute-file-design.md  2026-06-13-phase52-1-memory-flush-context-optimization.md  2026-06-13-phase52-2-heartbeat-optimization.md  2026-06-13-phase52-4-topic-patrol-optimization.md  2026-06-13-phase52-7-search-log-improvements.md  2026-06-13-phase52-context-optimization-implementation-plan.md  2026-06-13-precompact-sessionstart-validation.md
docs/review/: 2026-06-02-log-inspection-report.md  2026-06-03-external-crate-replacement-analysis.md  2026-06-03-geminiclaw-nonok-delivery-analysis.md  2026-06-03-geminiclaw-notifications-channel-analysis.md  2026-06-13-log-inspection-guide.md  2026-06-13-memory-flush-context-improvement-proposal.md  2026-06-13-request-prompt-optimization-report.md  log-inspection-guide.md
docs/specs/: 00_rustyclaw.md  01_architecture.md  02_agent_pipeline.md  03_workspace_spec.md  04_heartbeat_spec.md  05_gateway_spec.md  06_dashboard_spec.md  06_roadmap_decisions.md  07_mcp_plan.md  08_operation_inspection.md  09_geminiclaw_comparison.md  09_geminiclaw_feature_comparison.md  10_git_collaboration_rules.md  11_skills_spec.md  12_weather_hybrid_spec.md  12_weather_yolp_spec.md  2026-06-07-issue33-discord-rag-design.md  2026-06-07-phase42a-heartbeat-rag-query.md  2026-06-07-phase42b-heartbeat-step-rag.md  2026-06-07-phase42c-heartbeat-prompt-cache.md  2026-06-07-phase42d-time-decay-reranking.md  2026-06-07-phase43a-rag-optimized-heartbeat.md  2026-06-13-phase52-context-optimization-design.md  81_llm_provider_model_selection.md  91_geminiclaw_comparison.md  PicoClaw_comparison.md  llm-provider-model-selection.md
docs/superpowers/: dashboard-mockup.html
production/: .gitignore  config.json
production/config/: config.cloud-llm.json  config.debug.json  config.json  config.local-llm.json  config.release.json
production/workspace/: AGENTS.md  HEARTBEAT.md  MEMORY.md  SOUL.md  USER.md  cron.json
scripts/: check-config-sync.sh  check-lmstudio-context.sh  claw.sh  cross-build.sh  deploy.sh  discord-test.sh  get-neurons.sh  rpi4-daemon.sh
workspace/: AGENTS.md  GEMINI.md  HEARTBEAT.md  MEMORY.md  SOUL.md  USER.md  cron.json  memory.db
workspace/scripts/: 501_karakeep-cleanup.sh  README.md  karakeep_tag_items.sh
workspace/skills/: daily-briefing.md  session-logs.md  todo-tracker.md  workspace.md
(+463 files in other folders)
