[package]
name = "rustyclaw-agent"
version = "0.20.0"
edition = "2024"

[dependencies]
rustyclaw-config = { path = "../rustyclaw-config" }
rustyclaw-providers = { path = "../rustyclaw-providers" }
rustyclaw-storage = { path = "../rustyclaw-storage" }
rustyclaw-tools = { path = "../rustyclaw-tools" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rig-core = { version = "0.38", features = ["rmcp"] }


[dev-dependencies]
tempfile = "3.8"
