[package]
name = "rustyclaw-channels"
version = "0.4.0-dev"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "client", "gateway", "model"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
