[package]
name = "rustyclaw-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
rustyclaw-config = { path = "../rustyclaw-config" }
rustyclaw-channels = { path = "../rustyclaw-channels" }
rustyclaw-agent = { path = "../rustyclaw-agent" }
rustyclaw-storage = { path = "../rustyclaw-storage" }
rustyclaw-providers = { path = "../rustyclaw-providers" }
rustyclaw-mcp = { path = "../rustyclaw-mcp" }
rustyclaw-tools = { path = "../rustyclaw-tools" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sd-notify = "0.4.1"
dirs = "5.0"


[dev-dependencies]
filetime = "0.2.29"
tempfile = "3.10"
