[package]
name = "rustyclaw-gateway"
version = "0.20.0"
edition = "2024"

[dependencies]
rustyclaw-config = { path = "../rustyclaw-config" }
rustyclaw-channels = { path = "../rustyclaw-channels" }
rustyclaw-agent = { path = "../rustyclaw-agent" }
rustyclaw-storage = { path = "../rustyclaw-storage" }
rustyclaw-providers = { path = "../rustyclaw-providers" }
rustyclaw-tools = { path = "../rustyclaw-tools" }
rig-core = { version = "0.38", features = ["rmcp"] }
rmcp = "1.7"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }
anyhow = "1.0"
tracing = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gray_matter = "0.2"
sd-notify = "0.4.1"
rand = "0.8"

regex = "1"


[dev-dependencies]
filetime = "0.2.29"
tempfile = "3.10"
