[package]
name = "rustyclaw-mcp"
version = "0.20.0"
edition = "2024"

[dependencies]
rustyclaw-tools = { path = "../rustyclaw-tools" }
rustyclaw-config = { path = "../rustyclaw-config" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
