[package]
name = "rustyclaw-providers"
version = "0.20.0"
edition = "2024"

[dependencies]
rustyclaw-config = { path = "../rustyclaw-config" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
async-stream = "0.3"
thiserror = "1.0"
chrono = "0.4"
rig-core = "0.38"
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"
