[package]
name = "rustyclaw-storage"
version = "0.3.0-dev"
edition = "2024"

[dependencies]
rustyclaw-config = { path = "../rustyclaw-config" }
rustyclaw-providers = { path = "../rustyclaw-providers" }
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tantivy = "0.22"
once_cell = "1.18"
