[package]
name    = "rustyclaw-summary-proto"
version = "0.4.0-dev"
edition = "2024"

[[bin]]
name = "summary-proto"
path = "src/main.rs"

[dependencies]
rig-core           = "0.38"
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile   = "3"
serde_json = "1"
