[package]
name = "rustyclaw-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.0", features = ["process"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3"
