[package]
name = "rustyclaw-tools"
version = "0.4.0-dev"
edition = "2024"

[dependencies]
rig-core = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.0", features = ["process"] }
rustyclaw-storage = { path = "../rustyclaw-storage" }
rustyclaw-config = { path = "../rustyclaw-config" }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3"
